<?xml version="1.0" encoding="utf-8"?>
<com.relaxisapp.relaxis.views.BreathingView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout
	    android:id="@+id/breathingFragmentLinearLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
	    android:padding="@dimen/layout_padding">
	    
	    <Button
	        android:id="@+id/startBreathingButton"
	        android:text="@string/start"
	        android:drawableLeft="@drawable/ic_action_play"
	        style="@style/LargeButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/game_score">

                <TextView
                    android:id="@+id/scoreTextView"
                    style="@style/DataTextView" />

                <TextView
                    android:id="@+id/scoreDescTextView"
                    android:text="@string/score_desc"
                    style="@style/DataDescTextView" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/game_time_left">

                <TextView
                    android:id="@+id/breathingTimeLeftTextView"
                    style="@style/DataTextView" />

                <TextView
                    android:id="@+id/breathingTimeLeftDescTextView"
                    android:text="@string/time_left_desc"
                    style="@style/DataDescTextView" />

            </LinearLayout>

        </LinearLayout>
		
	</LinearLayout>

</com.relaxisapp.relaxis.views.BreathingView>