<?xml version="1.0" encoding="utf-8"?>
<com.relaxisapp.relaxis.views.HomeView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">
        
        <Button
            android:id="@+id/connectButton"
            android:text="@string/action_bluetooth_connect"
            android:drawableLeft="@drawable/ic_action_bluetooth"
            android:layout_gravity="center_horizontal"
            style="@style/LargeButton" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TableRow>
                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/table_hr">
                    <TextView
                        android:id="@+id/heartRateTextView"
                        android:drawableLeft="@drawable/ic_heart_rate"
                        style="@style/HomeDataTextView" />

                    <TextView
                        android:id="@+id/heartRateDescTextView"
                        android:text="@string/heartRate"
                        style="@style/HomeDataDescTextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/table_rr">
                    <TextView
                        android:id="@+id/rRIntervalTextView"
                        android:drawableLeft="@drawable/ic_rr_interval"
                        style="@style/HomeDataTextView" />

                    <TextView
                        android:id="@+id/rRIntervalDescTextView"
                        android:text="@string/rRInterval"
                        style="@style/HomeDataDescTextView" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/table_ihr">
                    <TextView
                        android:id="@+id/instantHeartRateTextView"
                        android:drawableLeft="@drawable/ic_instant_heart_rate"
                        style="@style/HomeDataTextView" />

                    <TextView
                        android:id="@+id/instantHeartRateDescTextView"
                        android:text="@string/instantHeartRate"
                        style="@style/HomeDataDescTextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/table_is">
                    <TextView
                        android:id="@+id/instantSpeedTextView"
                        android:drawableLeft="@drawable/ic_instant_speed"
                        style="@style/HomeDataTextView" />

                    <TextView
                        android:id="@+id/instantSpeedDescTextView"
                        android:text="@string/instantSpeed"
                        style="@style/HomeDataDescTextView" />
                </LinearLayout>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/musicButton"
            android:text="@string/musicButton"
            android:drawableLeft="@drawable/ic_action_view_as_list"
            android:layout_gravity="center_horizontal"
            style="@style/LargeButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/layout_padding">

            <ImageButton
                android:id="@+id/prevButton"
                android:src="@drawable/ic_action_previous"
                android:layout_gravity="center_horizontal"
                style="@style/PlayerButton" />

            <ImageButton
                android:id="@+id/pauseButton"
                android:src="@drawable/ic_action_play"
                android:layout_gravity="center_horizontal"
                style="@style/PlayerButton" />

            <ImageButton
                android:id="@+id/stopButton"
                android:src="@drawable/ic_action_stop"
                android:layout_gravity="center_horizontal"
                style="@style/PlayerButton" />

            <ImageButton
                android:id="@+id/nextButton"
                android:src="@drawable/ic_action_next"
                android:layout_gravity="center_horizontal"
                style="@style/PlayerButton" />

        </LinearLayout>

    </LinearLayout>

</com.relaxisapp.relaxis.views.HomeView>
